--- a/app/src/main/res/layout/fragment_listado_fichas.xml
+++ b/app/src/main/res/layout/fragment_listado_fichas.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoSecundario"
-    tools:context=".Rutas.Fichas.FichaNormal.ListadoFichas">
+    tools:context=".Rutas.Fichas.FichaNormal.ListadoFichasNormales.ListadoFichas">
 
     <include
         android:id="@+id/toolbar"
