--- a/app/src/main/res/layout/dialogo_editarperfil.xml
+++ b/app/src/main/res/layout/dialogo_editarperfil.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoSecundario">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tituloDialogoPerfil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Editar Perfil"
             android:background="@color/AzulOscuro"
             android:gravity="center"
-            android:layout_marginTop="10dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:text="Editar Perfil"
             android:textColor="@color/Blanco"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayoutFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="12dp"
             android:hint="Nombre del Perfil"
             app:counterEnabled="true"
             app:counterMaxLength="40">
@@ -42,73 +42,78 @@
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:weightSum="2">
-
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center">
-            <ImageView
-                android:id="@+id/imagenPerfilAux"
-                android:layout_width="125dp"
-                android:layout_height="125dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/logonuevo"/>
-        </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/botonGaleria"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:text="Galeria"
-                android:clickable="false"
-                android:drawableLeft="@drawable/ic_galeria"
-                android:paddingLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"/>
+                android:layout_weight="1"
+                android:gravity="center">
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_weight="0.2"/>
+                <ImageView
+                    android:id="@+id/imagenPerfilAux"
+                    android:layout_width="125dp"
+                    android:layout_height="125dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/logonuevo" />
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/botonCamara"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:text="Camara"
-                android:clickable="false"
-                android:drawableLeft="@drawable/ic_cam"
-                android:paddingLeft="15dp"
-                android:background="@color/AzulOscuro"/>
+                android:layout_weight="1"
+                android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/botonGaleria"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="0.9"
+                    android:background="@color/AzulOscuro"
+                    android:clickable="false"
+                    android:drawableLeft="@drawable/ic_galeria"
+                    android:paddingLeft="15dp"
+                    android:text="Galeria" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_weight="0.2" />
+
+                <Button
+                    android:id="@+id/botonCamara"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.9"
+                    android:background="@color/AzulOscuro"
+                    android:clickable="false"
+                    android:drawableLeft="@drawable/ic_cam"
+                    android:paddingLeft="15dp"
+                    android:text="Camara" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:layout_marginLeft="12dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="12dp"
             android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
             android:weightSum="2">
 
             <Button
@@ -116,23 +121,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.9"
+                android:background="@color/AzulOscuro"
                 android:text="Aceptar"
-                android:textSize="18sp"
-                android:background="@color/AzulOscuro"/>
+                android:textSize="18sp" />
 
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.2"/>
+                android:layout_weight="0.2" />
 
             <Button
                 android:id="@+id/botonCancelar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.9"
+                android:background="@color/AzulOscuro"
                 android:text="Cancelar"
-                android:textSize="18sp"
-                android:background="@color/AzulOscuro"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
